--- a/resource/css/style.scss
+++ b/resource/css/style.scss
@@ -3,26 +3,20 @@
 
 *, *:after, *:before {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
   width: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 body {
   width: 100%;
-  margin: 0;
-  padding: 0;
 
   font-family: 'Fira Sans Condensed', sans-serif;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-}
 
 @mixin clearfix() {
   content: "";
@@ -30,30 +24,37 @@ ul {
   clear: both;
 }
 
-.container {
-  &:after {
-    @include clearfix;
-  }
+
+.hide {
+  display: none;
 }
 
+$pc-bc: #242424;
 .pcounter {
   display: block;
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: 0.3em;
+  bottom: 0.3em;
   width: 15.5em;
   color: #eeeeee;
-  background-color: #242424;
+  background-color: $pc-bc;
   border: 1px solid #484848;
   line-height: 1.55em;
-  padding: 0.8em;
+  padding: 0.25em;
 
-  list-style-type: none;
-  // margin-left: auto;
-  // margin-right: auto;
+  ul {
+  }
 
   &__title {
+    font-size: 90%;
+    text-align: center;
+    padding-bottom: 0.5em;
+  }
 
+  &__status {
+    list-style-type: none;
+    // margin-left: auto;
+    // margin-right: auto;
   }
 
   &__label {
@@ -66,7 +67,17 @@ ul {
     padding-right: 0.5ex;
     font-size: 1.8em;
     font-weight: 200;
-    width: 6ex;
+    width: 50%;
     text-align: right;
   }
+}
+
+$normal-game-bgcolor: rgba(42, 237, 91, 100);
+.normal-game {
+  background: linear-gradient(to right, $normal-game-bgcolor 1%, $pc-bc 3%, $pc-bc 97%, $normal-game-bgcolor 99%);
+}
+
+$chancetime-bgcolor: #edcc29;
+.chance-time {
+  background: linear-gradient(to right, $chancetime-bgcolor 1%, $pc-bc 3%, $pc-bc 97%, $chancetime-bgcolor 99%);
 }
