--- a/resource/css/style.scss
+++ b/resource/css/style.scss
@@ -1,5 +1,5 @@
 // vim: ft=sass ts=2 sts=2 sw=2
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:200,400');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:400,500');
 
 *, *:after, *:before {
   box-sizing: border-box;
@@ -33,7 +33,7 @@ body {
 $pc-bc: #242424;
 
 .pcounter {
-  display: block;
+  display: flex;
   position: absolute;
   left: 0;
   right: 0;
@@ -64,11 +64,18 @@ $pc-bc: #242424;
 
   &__title {
     font-size: 90%;
+    font-weight: 500;
     text-align: center;
-    background-color: #343434;
+    background-color: #444444;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-radius: 5px;
   }
 
   &__status {
+    flex-grow: 1;
+    padding-left: 2em;
+    padding-right: 2em;
   }
 
   &__label {
@@ -82,7 +89,7 @@ $pc-bc: #242424;
     display: inline-block;
     padding-right: 0.5ex;
     font-size: 1em;
-    font-weight: 400;
+    font-weight: 500;
     text-align: left;
   }
 }
